<resources>
    <string name="app_name">TestProjectApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="daily">Daily</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="event_adder">addevent</string>
    <string name="eventadder">eventAdder</string>
    <string name="set_time">Set Time</string>
    <string name="textview1">TextView1</string>
    <string name="set_date">SET DATE</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="set_time2">SET TIME</string>
    <string name="set_date1">SET DATE</string>
    <string name="yyyy_m_d">yyyy/m/d</string>
    <string name="year_m_d">Year/m/d</string>
    <string name="categories">CATEGORIES</string>
    <string name="events">EVENTS</string>
    <string name="write_your_task">Write Your Task</string>
    <string name="add">ADD</string>
    <string name="_00_01">00:00</string>
    <string name="_00_00">00:00</string>
    <string name="event_description">Event Description</string>
    <string name="lines">LINES</string>
    <string name="category">Category</string>
    <string name="delete_all_events">Delete All Events</string>
    <string name="other">Other</string>
    <string name="professional">Professional</string>
    <string name="fitness">Fitness</string>
    <string name="personal">Personal</string>
    <string name="education">Education</string>
    <string-array name="weekly_list">
        <item>Education</item>
        <item>Fitness</item>
        <item>Profession</item>
        <item>Personal</item>
        <item>Others</item>
    </string-array>
</resources>