<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:layout_marginStart="0dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="0dp"
    android:outlineAmbientShadowColor="#1E1E1E"
    android:outlineSpotShadowColor="#434343"
    app:cardBackgroundColor="#E1E1E1"
    app:cardCornerRadius="14dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#659F9F9F"
        android:outlineSpotShadowColor="#353535"
        android:padding="2dp">

        <TextView
            android:id="@+id/startTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="@dimen/text_margin"
            android:background="@drawable/custom_textview2"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/_00_00"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="#C30554B5"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/endTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/imageView4"
            android:background="@drawable/custom_textview3"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/_00_01"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="#CE317C0E"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dateShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="95dp"
            android:layout_marginEnd="13dp"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/yyyy_m_d"
            android:textColor="#F2841BEC"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/categ_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="120dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="12dp"
            android:layout_toEndOf="@+id/endTimer"
            android:gravity="center_horizontal"
            android:text="@string/category"
            android:textColor="#F0980348"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/event_Content"
            android:layout_width="303dp"
            android:layout_height="73dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="2dp"
            android:layout_toStartOf="@+id/dateShow"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="#D2FFFFFF"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="2dp"
            android:text="@string/event_description"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="19dp"
            android:layout_height="27dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/startTimer"
            android:contentDescription="@string/lines"
            app:srcCompat="@drawable/linegraphics" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>