<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/weeklyFragment"
        android:name="com.dipen.testprojectapp.WeeklyFragment"
        android:label="fragment_weekly"
        tools:layout="@layout/fragment_weekly"/>
    <fragment
        android:id="@+id/educationListFragment"
        android:name="com.dipen.testprojectapp.EducationListFragment"
        android:label="Education Events"
        tools:layout="@layout/fragment_education_list_list" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.dipen.testprojectapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
       <action
            android:id="@+id/NavigateToAddEvent"
            app:destination="@id/addEventFragment" />
        <action
            android:id="@+id/weeklyEd"
            app:destination="@id/educationListFragment" />
        <action
            android:id="@+id/weeklyProfessional"
            app:destination="@id/professionalListFragment" />
        <action
            android:id="@+id/weeklyPersonal"
            app:destination="@id/personalListFragment" />
        <action
            android:id="@+id/weeklyFitness"
            app:destination="@id/fitnessListFragment" />
        <action
            android:id="@+id/weeklyOther"
            app:destination="@id/othersListFragment2" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.dipen.testprojectapp.ExamsListFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.dipen.testprojectapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addEventFragment"
        android:name="com.dipen.testprojectapp.AddEventFragment"
        android:label="Add Events"
        tools:layout="@layout/fragment_add_event" />
    <fragment
        android:id="@+id/personalListFragment"
        android:name="com.dipen.testprojectapp.PersonalListFragment"
        android:label="Personal Events"
        tools:layout="@layout/fragment_personal_list_list" />
    <fragment
        android:id="@+id/professionalListFragment"
        android:name="com.dipen.testprojectapp.ProfessionalListFragment"
        android:label="Professional Events"
        tools:layout="@layout/fragment_professional_list_list" />
    <fragment
        android:id="@+id/fitnessListFragment"
        android:name="com.dipen.testprojectapp.FitnessListFragment"
        android:label="Fitness Events"
        tools:layout="@layout/fragment_fitness_list_list" />
    <fragment
        android:id="@+id/othersListFragment2"
        android:name="com.dipen.testprojectapp.OthersListFragment"
        android:label="Others Events"
        tools:layout="@layout/fragment_others_list_list" />
</navigation>